# big_numbers

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
big_numbers/: CMakeLists.txt  main.cpp
big_numbers/src/: CMakeLists.txt
big_numbers/src/big_numbers/: whole_number.hpp
big_numbers/src/big_numbers/cpp/: whole_number.cpp
big_numbers/src/big_numbers/include/: whole_number.h
examples/: examples.cpp
src/: CMakeLists.txt
src/big_numbers/: CMakeLists.txt  whole_number.hpp
src/big_numbers/cpp/: base_converter.cpp  whole_number.cpp
src/big_numbers/cpp/hpc/: ctpl.h  thread_pool.h
src/big_numbers/cpp/hpc/concurrency/: concurrency_queue.h
src/big_numbers/include/: whole_number.h
src/include/: fast_big_integer.h
src/include/modules/converter/: bbc.h
src/include/modules/converter/big-int/: big-int.h
src/include/modules/hpc/: thread_pool.h
src/include/modules/hpc/concurrency/: concurrency_queue.h
tests/: CMakeLists.txt  performance_test.h  performance_tests.cpp  tests.cpp
tests/libs/googletest/googlemock/include/gmock/internal/: gmock-port.h
tests/libs/googletest/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc
tests/libs/googletest/googletest/include/gtest/: gtest-matchers.h  gtest-typed-test.h  gtest.h
tests/libs/googletest/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
tests/libs/googletest/googletest/src/: gtest-death-test.cc  gtest.cc
tests/libs/googletest/googletest/test/: gtest_stress_test.cc
